fix content align

--- a/CO2/5-change-content/styles.css
+++ b/CO2/5-change-content/styles.css
@@ -1,17 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Poppins:wght@300;400;500;600;700&family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 body {
-    font-family:"Poppins";
-    text-align: justify;
-    display:block;
-    padding:90px;
+    font-family: "Poppins";
+    display: block;
+    padding: 90px;
 }
 
 #text {
-    font-size:18px;
+    font-size: 18px;
+    text-align: justify;
 }
 
 .image {
-    max-width:80%;
+    max-width: 80%;
     max-height: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#h1 {
+    text-align: center;
 }
